Pasting images from Image Viewer not working
Use cases
I have a friend who's a photographer and is using Ubuntu 18.04 to edit her images. An issue that she encounters a lot is that Nautilus doesn't support pasting content of files, only files themselves.
As an example, her workflow for selecting good images is to browse through the images using Image Viewer or another application. When she find a good image, she then copies it from the image viewing program (right-click > Copy) and pastes it to a folder in Nautilus. This doesn't work, however, because the Image Viewer program copies the content of the file, not the file itself.
Because of this, now she needs to
- look at the images using Image Viewer
- note the filename of the image she likes
- go to nautilus
- search that image in a directory of 1000 images
- copy in nautilus and paste there.
There are many more use-cases for this behaviour, but in general, the issue is that most users don't know the difference between copying a file or copying its contents, so to them, this behaviour seems broken.
Desired behavior
Copying a picture to the clipboard and pasting it in Nautilus is possible. When the image gets pasted, a new file gets created with default permissions and the contents of the clipboard.
Benefits of the solution
- The behavior of pasting into Nautilus isn't dependent anymore on technical details (copying file vs copying contents)
- Easier to understand for new users and for less-technical users
- Nautilus reacts more to what users intuitively expect
Possible drawbacks
- Complexity