files-view: Allow pasting from G_TYPE_FILE and GDK_TYPE_FILE_LIST

Copying / pasting within Nautilus is always handled by NAUTILUS_CLIPBOARD,
but sometimes, copying outside of Nautilus may pass a G_TYPE_FILE or
GDK_TYPE_FILE_LIST.  Now that the clipboard handling has been
simplified we can accept these other types.

Issue 540 is actually an issue related to G_TYPE_FILE, not the image
itself.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/540